Cyberduck
https://cyberduck.io/

9.0.0
- [Feature] Versioning of files edited in external application (#15137)

8.9.0
- [Feature] Resumable file uploads (ownCloud) (#15619)
- [Feature] Support authentication using SSH certificates (SFTP) (#15183)
- [Bugfix] Failure sharing file (ownCloud) (#15855, #15839)
- [Bugfix] Disable signing and encryption by default (SMB) (#15817)
- [Bugfix] NTLM authentication failures (WebDAV, SharePoint) (#15127)

8.8.2
- [Bugfix] Slower file transfers caused by connections per host limit (#15737)
- [Bugfix] Unable to edit HTTP header metadata (S3) (#15742)

8.8.1
- [Bugfix] Mismatch with Content-MD5 for multipart uploads to vault (S3, Cryptomator) (#15704)

8.8.0
- [Localize] Tamil Localization
- [Bugfix] Improved retry and backoff strategy for API errors (Backblaze B2) (#15601)
- [Bugfix] Require signing and encryption by default (SMB) (#15638)
- [Bugfix] Support upload to buckets with object lock enabled (S3) (#15557)
- [Bugfix] Transfer incomplete message when copying between servers (#15583)
- [Bugfix] Unresponsive application when waiting for transfer to cancel on timeout (#15671)

8.7.3
- [Bugfix] Crash when opening application (Windows) (#15535)

8.7.2
- [Bugfix] Missing digest header when commiting large file upload (Box) (#14564)
- [Bugfix] Modification date not set in upload (Dropbox) (#15381)
- [Bugfix] Setting modification date truncates file (SMB) (#15495)

8.7.1
- [Bugfix] Crash when selecting private key outside of ~/.ssh (macOS, Mac App Store)
- [Bugfix] Application scoped bookmark to access file outside of sandbox not saved (macOS, Mac App Store) (#15250)
- [Bugfix] Failure parsing expiration from cached temporary credentials in AWS CLI configuration from AWS SSO (S3) (#15257)
- [Bugfix] Unable to authenticate with S3 (Credentials from AWS Command Line Interface) connection profile (S3) (#15222)