@@ -90,6 +90,21 @@
     <li><span class="label label-success">Feature</span> Versioning of files edited in external application (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/15137">#15137</a>)
     </li>
+    <li><span class="label label-success">Feature</span> Custom icons for protocols (Nextcloud, ownCloud)</li>
+    <li><span class="label label-success">Feature</span> Detect proxy configuration change for already open connections
+        (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/13274">#13274</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Rewrite protocol implementation (Azure Storage) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/15967">#15967</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Rewrite implementation of Transfers window (Windows) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/15885">#15885</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Failure retrieving previous versions of file (ownCloud)</li>
+    <li><span class="label label-warning">Bugfix</span> Missing shared folders (OneDrive Business) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/16036">#16036</a>)
+    </li>
 </ul>
 
 <p>
